--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,68 @@
 body{
+  font-family: 'Mukta', sans-serif;
   margin: 0;
   padding: 0;
   font-size: 1.235rem;
 }
 h1{
-  font-size: 3rem;
+  font-size: 3.6rem;
 }
 span{
   color: darkred;
 }
+p{
+  font-size: 1.15rem;
+  color: rgb(120, 100, 100);
+}
+.top-banner{
+  display: flex;
+  margin-bottom: 5em;
+  background-image: url("images/tanin.png");
+}
 .profile-container{
   display: flex;
+  margin-bottom: 5em;
 }
 .container{
   width: 50%;
-  padding-left: 10%;
-
+  padding-left: 8%;
+  padding-right: 5%;
 }
 .container img{
-  width: 70%;
+  width: 95%;
+  margin-top: 5%;
 }
+
 .experience-container{
   display: flex;
+  margin: 0 1% 5% 5%;
+}
+.experience-box{
   width: 40%;
-  padding-left: 10%;
+  padding: 0 2em;
+  margin-right: 6%;
+  box-shadow: 3px 3px 20px rgb(132, 123, 123);
+}
+.left-box{
+  border-left: 5px solid orange;
+}
+.right-box{
+  border-left: 5px solid blue;
+}
+footer p{
+  text-align: center;
+}
+#experience-head{
+  text-align:left;
+  padding-left: 1.5em;
+}
+.time{
+  color: orange;
+}
+.link-btn{
+  text-decoration: none;
+  background-image: linear-gradient(yellow,orange);
+  padding: .25em 1em;
+  border-radius: 10px;
+
 }
