--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
   padding: 0;
   font-size: 1.235rem;
 }
-h1{
+.container h1{
   font-size: 3.6rem;
 }
 span{
@@ -51,6 +51,9 @@ p{
   margin-right: 6%;
   box-shadow: 3px 3px 20px rgb(132, 123, 123);
 }
+.experience-box h1{
+  font-size: 2.5rem;
+}
 .left-box{
   border-left: 5px solid orange;
 }
@@ -59,6 +62,7 @@ p{
 }
 footer p{
   text-align: center;
+  color: black;
 }
 #experience-head{
   text-align:left;
@@ -73,7 +77,4 @@ footer p{
   padding: .25em 1em;
   border-radius: 10px;
 
-}
-.add-bg{
-  background-image: url("");
 }
